--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Term2StarterMap.Term2StarterMap
+EditorStartupMap=/Game/Term2StarterMap.Term2StarterMap
+GlobalDefaultGameMode=/Game/Term2/GameModes/BP_Term2GameModeBase.BP_Term2GameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
