--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Term2StarterMap.Term2StarterMap
 EditorStartupMap=/Game/Term2StarterMap.Term2StarterMap
 GlobalDefaultGameMode=/Game/Term2/GameModes/BP_Term2GameModeBase.BP_Term2GameModeBase_C
+bOffsetPlayerGamepadIds=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
